Update aws-knowledge-mcp to use HTTP type connection
- Changed from mcp-proxy with streamable HTTP to direct HTTP type
- Added autoApprove for aws___read_documentation and aws___search_documentation
- Updated README to document HTTP server pattern

--- a/aws-knowledge-mcp.json
+++ b/aws-knowledge-mcp.json
@@ -1,12 +1,12 @@
 {
   "mcpServers": {
     "aws-knowledge-mcp-server": {
-      "command": "uvx",
-      "args": [
-        "mcp-proxy",
-        "--transport",
-        "streamablehttp",
-        "https://knowledge-mcp.global.api.aws"
+      "type": "http",
+      "url": "https://knowledge-mcp.global.api.aws",
+      "disabled": false,
+      "autoApprove": [
+        "aws___read_documentation",
+        "aws___search_documentation"
       ]
     }
   }
